crates/nyx-lexer/tests/snapshots/integration_tests__variables__const_generic.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Const
- LBracket
- Ident: T
- RBracket
- Ident: DEFAULT
- Colon
- U32
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
