crates/nyx-lexer/tests/snapshots/integration_tests__variables__const_type_associated.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Const
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: DEFAULT_CAPACITY
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "4"
    suffix: ~
- Newline
- Const
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: GROW_FACTOR
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
