crates/nyx-lexer/tests/snapshots/integration_tests__variables__mut_no_type.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Mut
- Ident: x
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Mut
- Ident: counter
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "100"
    suffix: ~
- Newline
- Mut
- Ident: flag
- Eq
- "True"
- Newline
- Mut
- Ident: name
- Eq
- StringLiteral: initial
- Newline
