crates/nyx-lexer/tests/snapshots/integration_tests__variables__mut_with_type.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Mut
- Ident: a
- Colon
- I32
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Mut
- Ident: b
- Colon
- F32
- Eq
- FloatLiteral:
    digits: "0.0"
    exponent: ~
    suffix: ~
- Newline
- Mut
- Ident: c
- Colon
- Bool
- Eq
- "False"
- Newline
- Mut
- Ident: d
- Colon
- U8
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Mut
- Ident: counter
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
